--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-sizing:border-box;
 }
 
-.background{
+.homepage-background{
     background:#1d2026;
     min-height: 100vh;
     width: 100%;
