--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,59 @@ button span{
     margin-left: 31px;
 
 }
+
+.windowbackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('images/window.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
+
+.gc-container {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-110%, -50%);
+    text-align: center;
+    cursor: pointer;
+}
+
+.gc-icon {
+    width: 50px; 
+    height: 50px; 
+}
+
+.gc-name {
+    margin: 10px 0 0;
+    font-size: 18px;
+    color: white; 
+    font-family: Arial, sans-serif;
+}
+
+.taskbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; 
+    background-color: rgba(0, 0, 0, 0.8); 
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5); 
+}
+
+.taskbar-icons {
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+}
+
+.taskbar-icon-img {
+    width: 30px; 
+    height: 30px; 
+}
