--- a/styles.css
+++ b/styles.css
@@ -310,3 +310,39 @@ nav ul li a{
     width: 0; /* Start with 0 width */
     transition: width 5s linear; /* Smooth transition */
 }
+
+.blue-screen {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Optional: semi-transparent background */
+    z-index: 3000; /* Ensure it covers everything */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blue-screen-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.back-home-btn {
+    position: absolute;
+    bottom: 20px;
+    padding: 10px 20px;
+    background-color: #00986f;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.back-home-btn:hover {
+    background-color: #007a59;
+}
