--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ nav ul li a{
 }
 .welcome-msg {
     font-size: 18px;
-    color: #333;
+    color: #333 !important;
     margin-bottom: 20px;
 }
 .game-info {
